fix(client):Handle empty error responses from GitHub API